# Questerix.Fractions

./: .editorconfig  .eslintrc.json  .gitignore  .lighthouserc.json  .npmrc  .prettierignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HINT_GENERATION.md  LICENSE  PHASE0_REVISION_REPORT.md  README.md  Topics.docx  Topics.md  index.html  lighthouserc.cjs  package-lock.json  package.json  playwright.config.ts  playwright.nightly.config.ts  playwright.synthetic.config.ts  replit.md  replit.nix  spike.html  tailwind.config.ts  tsc-errors.txt  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.engine.config.ts  vitest.integration.config.ts  vitest.validators.config.ts  wrangler.toml
pipeline/: .env.example  CLAUDE.md  README.md  __init__.py  cli.py  generate.py  hints.py  level_archetypes.py  llm.py  parity_test.py  phase-0-fixes.py  phase_0b1_handauthor.py  pyproject.toml  requirements.txt  schemas.py  validate_and_report.py  validators_py.py  verify.py
pipeline/fixtures/: sample_template.json
pipeline/fixtures/parity/: benchmark_sort_to_zone.json  explain_your_order_sequence.json  identify_exact_index.json  label_exact_match.json  order_sequence.json  order_with_rule_explanation.json  partition_equal_areas.json  placement_snap8.json  (+1 more)
pipeline/output/: PHASE_0b1_QUICKREF.md  VALIDATION_SUMMARY.md  hint_generation_report.json  hint_validation_report.json  hints.json  hints_sample_15_templates.json  parity-report.json  phase_0b1_report.json
pipeline/prompts/: hint-generation.md  system.md
pipeline/scripts/: smoke_hints.py  verify-parity.py
(+1351 files in other folders)
