[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "questerix-content-pipeline"
version = "0.1.0"
description = "Build-time content authoring pipeline for Questerix Fractions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
